[75] more cleanup